common/app/assets/stylesheets/module/trails/_trail.scss
/* ==========================================================================
   Trail object
   ========================================================================== */
.trail {
    overflow: hidden;
    margin: 0;
    border-bottom: 1px solid #B3B3B4;
    padding: 0 0 24px 0;
}

  .trail:last-child {
      border-bottom: none;
  }

  .trail:first-child:last-child {
    padding: 0 0 0 0;
  }

.trail__headline {
  @extend %type-2;
  font-size: 19px;
  line-height: 23px;
  color: #000;
}

  .trail__headline a,
  .trail__headline a:hover,
  .trail__headline a:link,
  .trail__headline a:active,
  .trail__headline a:visited {
    color: #000;
  }

  .trail__headline a:active {
    text-decoration: underline;
  }

.trail__text {
  @extend %type-3;
  display: inline;
  padding: 0;
  color: #929497;

  @media screen and (min-width: 37.5em) {
    clear: none;
  }
}

.trail__img {
  width: 100%;
}

/* ==========================================================================
   Trail modifiers
   ========================================================================== */


/* Featured
 ========================================================================== */
.trail--featured {

  .trail__headline {
    @extend %type-1;

    a {
      display: block;
    }
  }

  .trail__headline--large {
    a {
      padding-bottom: 33px;
    }
  }

  .trail__img {
    vertical-align: bottom;
    margin-bottom: 12px;
  }
}

/* Thumbnail
 ========================================================================== */
.trail--thumbnail {

  .trail__headline {
    min-height: 72px;
  }

  .media__img {
    width: 9.625em;
    padding-right: 14px;
    margin-right: 0px;
  }
}

/* Misc
 ========================================================================== */
/**
 * @todo: Clean these up into proper modifiers
 **/
.matches-container .trail__text {
    display: none;
}

.competition .trail {
    margin-top: $baseline*3;
    border-bottom: none;
}

